Making check order item method sync.